K3S/infrastructure/registry/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: registry-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: docker-registry-ui
          image: joxit/docker-registry-ui:2.5.7
          ports:
            - containerPort: 80
