K3S/infrastructure/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: registry-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.8.3
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
              subPath: registry
            - name: registry-config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-pvc
        - name: registry-config
          configMap:
            name: registry-config
