K3S/infrastructure/registry/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui-svc
  namespace: registry-system
spec:
  type: ClusterIP
  selector:
    app: docker-registry-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: docker-registry-ui
