K3S/infrastructure/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-http
  namespace: registry-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: registry.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
    - host: registry.k3s.wiserisk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
